examples/type_system/failing/18_handle_incomplete_operation_set.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

// E402: handler is missing one or more declared effect operations.

effect Console {
    print: String -> ()
    read: () -> String
}

fn main() with Console {
    perform Console.print("hello") handle Console {
        print(resume, _msg) -> resume(())
    }
}
